Fix toolbar misalignment when logged in

--- a/code/sites/paraentender.com/themes/paraum/css/style.css
+++ b/code/sites/paraentender.com/themes/paraum/css/style.css
@@ -1,8 +1,3 @@
-/* @override 
-	http://local.paraentender.com/sites/paraentender.com/themes/paraum/css/style.css?na95ok
-	http://paraentender.com/sites/paraentender.com/themes/paraum/css/style.css?naevdp
-*/
-
 @import url(http://fonts.googleapis.com/css?family=Droid+Serif|Source+Sans+Pro:400,600,400italic,600italic|Merriweather);
 
 body,
@@ -10,8 +5,17 @@ h1.page-header {
   font-family: 'Droid Serif', serif;
 }
 
+body.toolbar .navbar-fixed-top {
+  top: 32px;
+  z-index: 499;
+}
+
 div.main-container {
   margin-top: 10px;
+}
+
+body.toolbar div.main-container {
+  margin-top: -20px;
 }
 
 div.profile,
